apps/shop/recommendation/k8s/overlays/non-prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-recommendation-dev
spec:
  host: shop-recommendation.shop-recommendation.svc.cluster.local
  subsets:
  - name: shop-recommendation-dev
    labels:
      app: shop-recommendation
      env: dev
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-recommendation-dev-d1a
    labels:
      app: shop-recommendation
      env: dev
      deploy.cloud.google.com/target-id: d1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
